# banshee

./: .gitattributes  .gitignore  .gitmodules  AUTHORS  Banshee.sln  COPYING  MAINTAINERS  Makefile.am  NEWS  README  README.l10n  autogen.sh  banshee.doap  bootstrap-bundle  bootstrap-osx  configure.ac  profile-configure  release-rc
help/: Makefile.am  banshee.omf.in
help/C/: TODO  add-podcast.page  add-radio.page  add-radiostation.page  adv-keyboardshortcuts.page  advanced.page  amazon.page  import.page  importplaylist.page  index.page  introduction.page  lastfm.page  manage-coverart.page  manage-playlists.page  manage-tags.page  play-queue.page  play.page  search.page  sort.page  sync.page  ui.page
help/ca/: ca.po
help/de/: de.po
help/el/: el.po
help/es/: es.po
help/fr/: fr.po
help/gl/: gl.po
help/sl/: sl.po
src/Backends/Banshee.GStreamerSharp/: Banshee.GStreamerSharp.addin.xml  Banshee.GStreamerSharp.csproj  Makefile.am
src/Backends/Banshee.GStreamerSharp/Banshee.GStreamerSharp/: PlayerEngine.cs
src/Backends/Banshee.Gio/: Banshee.Gio.csproj  Makefile.am
src/Backends/Banshee.Hal/: Banshee.Hal.addin.xml  Banshee.Hal.csproj  Makefile.am
src/Backends/Banshee.Osx/: Banshee.Osx.addin.xml  Banshee.Osx.csproj  Makefile.am
src/Clients/Booter/: Booter.csproj  Makefile.am  banshee-1.darwin.in  banshee-1.linux.in
src/Clients/Booter/Booter/: Entry.cs
src/Core/Banshee.WebBrowser/: Banshee.WebBrowser.csproj  Makefile.am
src/Dap/Banshee.Dap.AppleDevice/: Banshee.Dap.AppleDevice.addin.xml  Banshee.Dap.AppleDevice.csproj  Makefile.am
src/Dap/Banshee.Dap.Ipod/: Banshee.Dap.Ipod.addin.xml  Banshee.Dap.Ipod.addin.xml.in  Banshee.Dap.Ipod.csproj  Makefile.am
src/Extensions/: Makefile.am
src/Extensions/Banshee.AmazonMp3/: Banshee.AmazonMp3.addin.xml  Banshee.AmazonMp3.csproj  Makefile.am
src/Extensions/Banshee.AmazonMp3.Store/: Banshee.AmazonMp3.Store.addin.xml  Banshee.AmazonMp3.Store.csproj  Makefile.am
src/Extensions/Banshee.AudioCd/: Banshee.AudioCd.addin.xml  Banshee.AudioCd.addin.xml.in  Banshee.AudioCd.csproj
src/Extensions/Banshee.Audiobook/: Banshee.Audiobook.addin.xml  Banshee.Audiobook.addin.xml.in  Banshee.Audiobook.csproj  Makefile.am
src/Extensions/Banshee.BooScript/: Banshee.BooScript.addin.xml  Banshee.BooScript.addin.xml.in  Banshee.BooScript.csproj  Makefile.am
src/Extensions/Banshee.Bookmarks/: Banshee.Bookmarks.addin.xml  Banshee.Bookmarks.addin.xml.in  Banshee.Bookmarks.csproj  Makefile.am
src/Extensions/Banshee.Bpm/: Banshee.Bpm.addin.xml  Banshee.Bpm.addin.xml.in  Banshee.Bpm.csproj
src/Extensions/Banshee.CoverArt/: Banshee.CoverArt.addin.xml  Banshee.CoverArt.addin.xml.in  Banshee.CoverArt.csproj
src/Extensions/Banshee.Daap/: Banshee.Daap.addin.xml  Banshee.Daap.addin.xml.in  Banshee.Daap.csproj  Makefile.am
src/Extensions/Banshee.Emusic/: Banshee.Emusic.addin.xml  Banshee.Emusic.csproj  Makefile.am
src/Extensions/Banshee.FileSystemQueue/: Banshee.FileSystemQueue.addin.xml  Banshee.FileSystemQueue.addin.xml.in  Banshee.FileSystemQueue.csproj
src/Extensions/Banshee.Fixup/: Banshee.Fixup.addin.xml  Banshee.Fixup.csproj  Makefile.am
src/Extensions/Banshee.InternetArchive/: Banshee.InternetArchive.addin.xml  Banshee.InternetArchive.addin.xml.in  Banshee.InternetArchive.csproj
src/Extensions/Banshee.InternetRadio/: Banshee.InternetRadio.addin.xml  Banshee.InternetRadio.addin.xml.in  Banshee.InternetRadio.csproj
src/Extensions/Banshee.Lastfm/: Banshee.Lastfm.addin.xml  Banshee.Lastfm.addin.xml.in  Banshee.Lastfm.csproj  Makefile.am
src/Extensions/Banshee.LastfmStreaming/: Banshee.LastfmStreaming.addin.xml  Banshee.LastfmStreaming.csproj  Makefile.am
src/Extensions/Banshee.LibraryWatcher/: Banshee.LibraryWatcher.addin.xml  Banshee.LibraryWatcher.csproj  Makefile.am
src/Extensions/Banshee.MeeGo/: Banshee.MeeGo.addin.xml  Banshee.MeeGo.csproj  Banshee.MeeGo.dll.config  Makefile.am  meego-panel-banshee  meego-panel-banshee.desktop.in.in  org.moblin.UX.Shell.Panels.banshee.service.in
src/Extensions/Banshee.MiniMode/: Banshee.MiniMode.addin.xml  Banshee.MiniMode.addin.xml.in  Banshee.MiniMode.csproj  Makefile.am
src/Extensions/Banshee.MiroGuide/: Banshee.MiroGuide.addin.xml  Banshee.MiroGuide.csproj  Makefile.am
src/Extensions/Banshee.Moblin/: Banshee.Moblin.addin.xml  Banshee.Moblin.csproj
src/Extensions/Banshee.Mpris/: Banshee.Mpris.csproj  Makefile.am
src/Extensions/Banshee.MultimediaKeys/: Banshee.MultimediaKeys.addin.xml  Banshee.MultimediaKeys.addin.xml.in  Banshee.MultimediaKeys.csproj  Makefile.am
src/Extensions/Banshee.NotificationArea/: Banshee.NotificationArea.addin.xml  Banshee.NotificationArea.addin.xml.in  Banshee.NotificationArea.csproj  Makefile.am
src/Extensions/Banshee.NowPlaying/: Banshee.NowPlaying.addin.xml  Banshee.NowPlaying.csproj
src/Extensions/Banshee.PlayQueue/: Banshee.PlayQueue.addin.xml  Banshee.PlayQueue.addin.xml.in  Banshee.PlayQueue.csproj
src/Extensions/Banshee.PlayerMigration/: Banshee.PlayerMigration.addin.xml  Banshee.PlayerMigration.addin.xml.in  Banshee.PlayerMigration.csproj
src/Extensions/Banshee.Podcasting/: Banshee.Podcasting.addin.xml  Banshee.Podcasting.addin.xml.in  Banshee.Podcasting.csproj  Makefile.am
src/Extensions/Banshee.Sample/: Banshee.Sample.csproj
src/Extensions/Banshee.SoundMenu/: Banshee.SoundMenu.addin.xml  Banshee.SoundMenu.csproj  Makefile.am
src/Extensions/Banshee.SqlDebugConsole/: Banshee.SqlDebugConsole.csproj
src/Extensions/Banshee.Torrent/: Banshee.Torrent.addin.xml  Banshee.Torrent.addin.xml.in  Banshee.Torrent.csproj  Makefile.am
src/Extensions/Banshee.UbuntuOneMusicStore/: Banshee.UbuntuOneMusicStore.addin.xml  Banshee.UbuntuOneMusicStore.csproj  Makefile.am
src/Extensions/Banshee.Wikipedia/: Banshee.Wikipedia.addin.xml  Banshee.Wikipedia.addin.xml.in  Banshee.Wikipedia.csproj  Makefile.am
src/Extensions/Banshee.Windows7/: Banshee.Windows7.addin.xml  Banshee.Windows7.csproj
src/Extensions/Banshee.YouTube/: Banshee.YouTube.addin.xml  Banshee.YouTube.csproj  Makefile.am
src/Extensions/Template/: Template.addin.xml
(+1079 files in other folders)
