if ENABLE_GNOME_DOCS
include $(top_srcdir)/gnome-doc-utils.make

DOC_ID = banshee
DOC_INCLUDES = legal.xml
DOC_FIGURES = 

DOC_PAGES = \
	add-podcast.page \
	add-radio.page \
	advanced.page \
	import.page \
	index.page \
	manage-coverart.page \
	manage-playlists.page \
	manage-tags.page \
	play-queue.page \
	play.page \
	search.page \
	sort.page \
	sync.page

DOC_LINGUAS = 
dist-hook: doc-dist-hook
endif
