if HAVE_GNOME_DOC_UTILS
include $(top_srcdir)/build/gnome-doc-utils.make

DOC_ID = banshee
DOC_INCLUDES = legal.xml
DOC_FIGURES = 

DOC_PAGES = \
	add-podcast.page \
	add-radio.page \
	advanced.page \
	amazon.page \
	emusic.page \
	extensions.page \
	import.page \
	index.page \
	introduction.page \
	itunes-import.page \
	keyboardshortcuts.page \
	lastfm.page \
	manage-coverart.page \
	manage-playlists.page \
	manage-tags.page \
	play-queue.page \
	play.page \
	rb-import.page \
	search.page \
	sort.page \
	sync.page \
	ui.page

DOC_LINGUAS = de es gl
dist-hook: doc-dist-hook

endif
