SUBDIRS = \
	Banshee.Audiobook \
	Banshee.AudioCd \
	Banshee.Bookmarks \
	Banshee.BooScript \
	Banshee.Bpm \
	Banshee.CoverArt \
	Banshee.Daap \
	Banshee.Emusic \
	Banshee.FileSystemQueue \
	Banshee.InternetArchive \
	Banshee.InternetRadio \
	Banshee.Lastfm \
	Banshee.LibraryWatcher \
	Banshee.MiniMode \
	Banshee.MultimediaKeys \
	Banshee.NotificationArea \
	Banshee.NowPlaying \
	Banshee.PlayerMigration \
	Banshee.PlayQueue \
	Banshee.Moblin \
	Banshee.Podcasting \
	Banshee.Sample \
	Banshee.SqlDebugConsole \
	Banshee.Torrent \
	Banshee.RemoteAudio \
	Banshee.Wikipedia


MAINTAINERCLEANFILES = Makefile.in
