ASSEMBLY = Banshee.Audiobook
TARGET = library
LINK = $(REF_EXTENSION_AUDIOBOOK)
INSTALL_DIR = $(EXTENSIONS_INSTALL_DIR)

SOURCES =  \
	Banshee.Audiobook/AudiobookFileNamePattern.cs \
	Banshee.Audiobook/AudiobookLibrarySource.cs

RESOURCES = Banshee.Audiobook.addin.xml

include $(top_srcdir)/build/build.mk
