ASSEMBLY = Banshee.Bookmarks
TARGET = library
LINK = $(REF_EXTENSION_BOOKMARKS)
INSTALL_DIR = $(EXTENSIONS_INSTALL_DIR)

SOURCES =  \
	Banshee.Bookmarks/Bookmark.cs \
	Banshee.Bookmarks/BookmarksService.cs \
	Banshee.Bookmarks/BookmarkUI.cs

RESOURCES =  \
	Banshee.Bookmarks.addin.xml \
	Resources/BookmarksMenu.xml

include $(top_srcdir)/build/build.mk

