ASSEMBLY = Banshee.LastfmStreaming
TARGET = library
LINK = $(REF_EXTENSION_LASTFM_STREAMING)
INSTALL_DIR = $(EXTENSIONS_INSTALL_DIR)

SOURCES =  \
	Banshee.LastfmStreaming.Radio/LastfmStreamingActions.cs \
	Banshee.LastfmStreaming.Radio/LastfmStreamingService.cs \
	Banshee.LastfmStreaming.Radio/LastfmTrackInfo.cs \
	Banshee.LastfmStreaming.Radio/StationEditor.cs \
	Banshee.LastfmStreaming.Radio/StationSource.cs \
	Banshee.LastfmStreaming.Radio/StationType.cs

RESOURCES = Banshee.LastfmStreaming.addin.xml

include $(top_srcdir)/build/build.mk

